--- a/Aier360/Controllers/校园/点名统计+班级列表+教工列表/Teachers.storyboard
+++ b/Aier360/Controllers/校园/点名统计+班级列表+教工列表/Teachers.storyboard
@@ -247,6 +247,78 @@
                                             <segue destination="Eym-sV-nvR" kind="show" identifier="detail" id="7Lt-ac-a0u"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="Q5V-Di-KCI" detailTextLabel="Sak-3t-buA" style="IBUITableViewCellStyleValue1" id="Amd-4R-f1p">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Amd-4R-f1p" id="7xC-xB-9l2">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Q5V-Di-KCI">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Sak-3t-buA">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.70196078429999997" green="0.69019607839999997" blue="0.65098039220000004" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZXClassTeacherCell" id="vzF-54-CsQ" customClass="ZXClassTeacherCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vzF-54-CsQ" id="Cvy-XC-UUb">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ogh-dm-sfS">
+                                                    <rect key="frame" x="15" y="15" width="20" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="20" id="FQX-nA-ChH"/>
+                                                        <constraint firstAttribute="height" constant="20" id="JJm-jF-lM4"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AeY-mx-cZ6">
+                                                    <rect key="frame" x="325" y="15" width="260" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="IrH-hH-bjV"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.70196078429999997" green="0.69019607839999997" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mo5-Jy-Pc8">
+                                                    <rect key="frame" x="50" y="15" width="260" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="271-DE-5V6"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="Ogh-dm-sfS" firstAttribute="top" secondItem="Cvy-XC-UUb" secondAttribute="top" constant="15" id="2Va-mW-lg8"/>
+                                                <constraint firstItem="mo5-Jy-Pc8" firstAttribute="leading" secondItem="Ogh-dm-sfS" secondAttribute="trailing" constant="15" id="D2F-kG-xxV"/>
+                                                <constraint firstItem="AeY-mx-cZ6" firstAttribute="leading" secondItem="mo5-Jy-Pc8" secondAttribute="trailing" constant="15" id="JQp-aG-Ej4"/>
+                                                <constraint firstItem="mo5-Jy-Pc8" firstAttribute="top" secondItem="Cvy-XC-UUb" secondAttribute="topMargin" constant="7" id="RZB-63-RYj"/>
+                                                <constraint firstAttribute="trailing" secondItem="AeY-mx-cZ6" secondAttribute="trailing" constant="15" id="W8A-FD-AC1"/>
+                                                <constraint firstItem="AeY-mx-cZ6" firstAttribute="width" secondItem="mo5-Jy-Pc8" secondAttribute="width" id="a9x-hK-Kry"/>
+                                                <constraint firstItem="AeY-mx-cZ6" firstAttribute="top" secondItem="Cvy-XC-UUb" secondAttribute="top" constant="15" id="ifj-Jc-Kee"/>
+                                                <constraint firstItem="Ogh-dm-sfS" firstAttribute="leading" secondItem="Cvy-XC-UUb" secondAttribute="leading" constant="15" id="y7g-Bi-jkq"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="hasNewLabel" destination="AeY-mx-cZ6" id="ofS-nD-cuS"/>
+                                            <outlet property="logoImage" destination="Ogh-dm-sfS" id="9X0-de-w0z"/>
+                                            <outlet property="titleLabel" destination="mo5-Jy-Pc8" id="pha-CW-j3w"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="B0P-Jk-DEY" id="OxZ-Oh-Ubg"/>
