--- a/Aier360/Controllers/联系人/Contacts.storyboard
+++ b/Aier360/Controllers/联系人/Contacts.storyboard
@@ -208,7 +208,7 @@
                                                         <constraint firstAttribute="height" constant="21" id="djI-jn-zXv"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wat-Uq-svQ">
@@ -237,7 +237,7 @@
                                                         <constraint firstAttribute="height" constant="20" id="ogj-K9-eAp"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -282,7 +282,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5q6-q8-yb9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1713" y="401"/>
+            <point key="canvasLocation" x="1820" y="381"/>
         </scene>
         <!--Add Contacts View Controller-->
         <scene sceneID="V2U-aZ-hM3">
@@ -299,7 +299,7 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="65" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="4ah-HE-GR4">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <searchBar key="tableHeaderView" contentMode="redraw" id="rF3-qr-HsM">
+                                <searchBar key="tableHeaderView" contentMode="redraw" placeholder="输入爱儿号或手机号" id="rF3-qr-HsM">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <textInputTraits key="textInputTraits"/>
@@ -351,8 +351,8 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="R0j-Ve-ZzL" id="cPN-yR-w85">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="contact_scan" translatesAutoresizingMaskIntoConstraints="NO" id="W8w-d6-0h0">
-                                                    <rect key="frame" x="15" y="12" width="30" height="30"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="contact_scan" translatesAutoresizingMaskIntoConstraints="NO" id="W8w-d6-0h0">
+                                                    <rect key="frame" x="15" y="11" width="30" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="30" id="1vI-z1-xGG"/>
                                                         <constraint firstAttribute="height" constant="30" id="l4m-ff-tlQ"/>
@@ -380,6 +380,56 @@
                                         <connections>
                                             <outlet property="logoImage" destination="W8w-d6-0h0" id="jCf-cx-XnI"/>
                                             <outlet property="titleLabel" destination="IJc-gp-cnz" id="kEz-cz-KCN"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZXContactsCell" rowHeight="55" id="46S-3S-r6V" customClass="ZXContactsCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="46S-3S-r6V" id="eWn-rf-Svn">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Mn8-fO-Kh4">
+                                                    <rect key="frame" x="15" y="10" width="35" height="35"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="35" id="nvG-N9-zTq"/>
+                                                        <constraint firstAttribute="height" constant="35" id="zx5-ye-Gi4"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lq4-oR-FBZ">
+                                                    <rect key="frame" x="65" y="10" width="520" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="cPM-ci-9bS"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kri-CH-4kd">
+                                                    <rect key="frame" x="65" y="30" width="520" height="15"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="15" id="bbO-Eg-vY7"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.63137254901960782" green="0.61568627450980395" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Kri-CH-4kd" firstAttribute="top" secondItem="Lq4-oR-FBZ" secondAttribute="bottom" id="C0a-oC-SKx"/>
+                                                <constraint firstAttribute="trailing" secondItem="Kri-CH-4kd" secondAttribute="trailing" constant="15" id="OlG-vt-geL"/>
+                                                <constraint firstItem="Kri-CH-4kd" firstAttribute="leading" secondItem="Mn8-fO-Kh4" secondAttribute="trailing" constant="15" id="QBL-a7-wop"/>
+                                                <constraint firstItem="Mn8-fO-Kh4" firstAttribute="leading" secondItem="eWn-rf-Svn" secondAttribute="leading" constant="15" id="aqg-EB-BzU"/>
+                                                <constraint firstAttribute="trailing" secondItem="Lq4-oR-FBZ" secondAttribute="trailing" constant="15" id="lTH-Ti-Enl"/>
+                                                <constraint firstItem="Mn8-fO-Kh4" firstAttribute="top" secondItem="eWn-rf-Svn" secondAttribute="top" constant="10" id="pCQ-K4-vTR"/>
+                                                <constraint firstItem="Lq4-oR-FBZ" firstAttribute="leading" secondItem="Mn8-fO-Kh4" secondAttribute="trailing" constant="15" id="pk1-FJ-Txr"/>
+                                                <constraint firstItem="Lq4-oR-FBZ" firstAttribute="top" secondItem="eWn-rf-Svn" secondAttribute="top" constant="10" id="qya-za-dyg"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <outlet property="addressLabel" destination="Kri-CH-4kd" id="q5s-sZ-XLg"/>
+                                            <outlet property="logoImage" destination="Mn8-fO-Kh4" id="HqX-Tm-CMR"/>
+                                            <outlet property="titleLabel" destination="Lq4-oR-FBZ" id="dKc-C3-e8U"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -413,7 +463,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="1713" y="1075"/>
+            <point key="canvasLocation" x="1713" y="1074"/>
         </scene>
     </scenes>
     <resources>
