--- a/Aier360/Controllers/发现/Discovery.storyboard
+++ b/Aier360/Controllers/发现/Discovery.storyboard
@@ -115,8 +115,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Cw1-V6-FSs">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="506"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Cw1-V6-FSs">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZXParentDynamicCell" rowHeight="420" id="SYr-In-ckO" customClass="ZXParentDynamicCell">
@@ -367,15 +367,84 @@
                                     <outlet property="delegate" destination="8Ba-ui-TaV" id="kmI-Qx-HHD"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jl5-uF-Pdq">
+                                <rect key="frame" x="0.0" y="551" width="600" height="49"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tabbar_bg" translatesAutoresizingMaskIntoConstraints="NO" id="4sj-Wl-C4Y">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="49"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nMI-2Q-yYC">
+                                        <rect key="frame" x="300" y="0.0" width="300" height="49"/>
+                                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <state key="normal" title="评论我的">
+                                            <color key="titleColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="selected" title="评论我的" backgroundImage="dynamic_bt_tabbg">
+                                            <color key="titleColor" red="0.08235294118" green="0.80000000000000004" blue="0.61176470589999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="messageAction:" destination="8Ba-ui-TaV" eventType="touchUpInside" id="J91-3p-SlD"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gbh-PW-IcI">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="49"/>
+                                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <state key="normal" title="家长圈">
+                                            <color key="titleColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="selected" title="家长圈" backgroundImage="dynamic_bt_tabbg">
+                                            <color key="titleColor" red="0.082352941176470587" green="0.80000000000000004" blue="0.61176470588235299" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="circleAction:" destination="8Ba-ui-TaV" eventType="touchUpInside" id="Bb1-0W-jw0"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="4sj-Wl-C4Y" secondAttribute="bottom" id="0Ff-JZ-L2O"/>
+                                    <constraint firstAttribute="bottom" secondItem="nMI-2Q-yYC" secondAttribute="bottom" id="51Y-jj-iPo"/>
+                                    <constraint firstItem="Gbh-PW-IcI" firstAttribute="top" secondItem="jl5-uF-Pdq" secondAttribute="top" id="7B1-lH-ONE"/>
+                                    <constraint firstItem="Gbh-PW-IcI" firstAttribute="width" secondItem="nMI-2Q-yYC" secondAttribute="width" id="AyX-kI-bFQ"/>
+                                    <constraint firstAttribute="height" constant="49" id="Hkd-Nb-e8a"/>
+                                    <constraint firstItem="4sj-Wl-C4Y" firstAttribute="leading" secondItem="jl5-uF-Pdq" secondAttribute="leading" id="PD8-rY-V6V"/>
+                                    <constraint firstAttribute="trailing" secondItem="4sj-Wl-C4Y" secondAttribute="trailing" id="TEj-1e-18N"/>
+                                    <constraint firstAttribute="trailing" secondItem="nMI-2Q-yYC" secondAttribute="trailing" id="auW-Qd-YP0"/>
+                                    <constraint firstItem="nMI-2Q-yYC" firstAttribute="leading" secondItem="Gbh-PW-IcI" secondAttribute="trailing" id="fZO-MC-Dl4"/>
+                                    <constraint firstItem="nMI-2Q-yYC" firstAttribute="top" secondItem="jl5-uF-Pdq" secondAttribute="top" id="g9k-nK-BEz"/>
+                                    <constraint firstItem="Gbh-PW-IcI" firstAttribute="leading" secondItem="jl5-uF-Pdq" secondAttribute="leading" id="pOI-Va-AL3"/>
+                                    <constraint firstItem="4sj-Wl-C4Y" firstAttribute="top" secondItem="jl5-uF-Pdq" secondAttribute="top" id="qGT-ql-N5L"/>
+                                    <constraint firstAttribute="bottom" secondItem="Gbh-PW-IcI" secondAttribute="bottom" id="rYK-0Y-zoj"/>
+                                </constraints>
+                            </view>
+                            <containerView hidden="YES" opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9uy-LS-vx7">
+                                <rect key="frame" x="0.0" y="20" width="600" height="531"/>
+                                <connections>
+                                    <segue destination="Ug0-q8-uaH" kind="embed" id="0L5-U1-eAQ"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Cw1-V6-FSs" firstAttribute="top" secondItem="6DR-4M-RLf" secondAttribute="top" id="2ca-jL-3nc"/>
                             <constraint firstItem="Cw1-V6-FSs" firstAttribute="leading" secondItem="6DR-4M-RLf" secondAttribute="leading" id="7UU-vQ-qr7"/>
+                            <constraint firstItem="jl5-uF-Pdq" firstAttribute="top" secondItem="Cw1-V6-FSs" secondAttribute="bottom" id="A3x-PR-hnr"/>
+                            <constraint firstItem="9uy-LS-vx7" firstAttribute="top" secondItem="oBN-HI-947" secondAttribute="bottom" id="EeL-QP-evW"/>
+                            <constraint firstItem="9uy-LS-vx7" firstAttribute="leading" secondItem="6DR-4M-RLf" secondAttribute="leading" id="Luh-tV-g23"/>
+                            <constraint firstItem="jl5-uF-Pdq" firstAttribute="leading" secondItem="6DR-4M-RLf" secondAttribute="leading" id="NUo-EG-Apc"/>
+                            <constraint firstAttribute="bottom" secondItem="jl5-uF-Pdq" secondAttribute="bottom" id="VoM-iB-VDt"/>
+                            <constraint firstItem="jl5-uF-Pdq" firstAttribute="top" secondItem="9uy-LS-vx7" secondAttribute="bottom" id="XNA-TS-LnM"/>
+                            <constraint firstAttribute="trailing" secondItem="jl5-uF-Pdq" secondAttribute="trailing" id="lkB-uT-Nlc"/>
+                            <constraint firstAttribute="trailing" secondItem="9uy-LS-vx7" secondAttribute="trailing" id="tmf-kb-r6L"/>
                             <constraint firstAttribute="trailing" secondItem="Cw1-V6-FSs" secondAttribute="trailing" id="y2h-Dv-B6T"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="circleButton" destination="Gbh-PW-IcI" id="aOO-Ms-BfM"/>
+                        <outlet property="messageButton" destination="nMI-2Q-yYC" id="8pK-iX-c33"/>
+                        <outlet property="messageView" destination="9uy-LS-vx7" id="xhQ-84-gGM"/>
                         <outlet property="tableView" destination="Cw1-V6-FSs" id="fBf-63-W2S"/>
                     </connections>
                 </viewController>
@@ -392,11 +461,11 @@
                         <viewControllerLayoutGuide type="bottom" id="yrP-x5-UT7"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="bXp-Kg-OpY">
-                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="531"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="130" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="UEa-VP-piH">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="531"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="130" id="x67-1M-4eX" customClass="ZXMessageCell">
@@ -510,10 +579,12 @@
     <resources>
         <image name="bt_comment_n" width="16" height="16"/>
         <image name="dynamic_bt_more_gray" width="18" height="4"/>
+        <image name="dynamic_bt_tabbg" width="187" height="57"/>
         <image name="dynamic_ic_fav" width="16" height="14"/>
         <image name="dynamic_ic_faved" width="16" height="14"/>
         <image name="dynamic_ic_parent" width="26" height="26"/>
         <image name="mine_sexage_female" width="27" height="13"/>
+        <image name="tabbar_bg" width="375" height="58"/>
         <image name="商业:服务业:个体经营" width="13" height="13"/>
     </resources>
 </document>
